# logsumexp

./: .gitignore  README.md  pyproject.toml
docs/: main.bib  main.tex  slides.tex
etjax/: models.py
examples/: main.ipynb
logsumexp/: __init__.py  energy.py  models.py  solver.py
