[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
name = "logsumexp"
requires-python = ">=3.10,<3.12"
dependencies = [
    "jax==0.4.38",
    "optax==0.2.4",
    "equinox==0.11.11",
    "diffrax==0.6.2"
]

[tool.setuptools.packages.find]
include = ["logsumexp"]
